--- a/src/style/Pages/WorkPage.scss
+++ b/src/style/Pages/WorkPage.scss
@@ -2,6 +2,7 @@
 
 .work-app {
   width: 100%;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
